--- a/css/style.css
+++ b/css/style.css
@@ -2,15 +2,50 @@
   font-family: "Roboto", sans-serif;
   color: black;
 }
+body {
+  font-family: "Roboto", sans-serif;
+  color: black;
+}
 
 p {
   margin: 0;
 }
+
+
+.btn{
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 1.85;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.06em;
+  cursor: pointer;
+  color: #FFFFFF;
+
+  position: absolute;
+  width: 200px;
+  height: 50px;
+  left: 700px;
+  top: 430px;
+  background: #2196F3;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+}
+
 .header-link-logo {
-  color: black;
+  font-weight: bold;
+  font-size: 26px;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
+  color: #2196f3;
 }
 .logo {
-  color: #2196f3;
+  font-weight: bold;
+  font-size: 26px;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
+  color: #000000;
 }
 a {
   text-decoration: none;
@@ -24,9 +59,12 @@ ul {
 }
 .hero-title {
   color: #ffffff;
-  font-family: sans-serif;
   text-align: center;
-  border-radius: nullpx;
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
 }
 .hero {
   height: 600px;
@@ -34,5 +72,68 @@ ul {
   background-color: #2f303a;
 }
 .header {
-  background-color: #ececec;
+  /* position: absolute;
+  width: 1600px;
+  height: 80px;
+  left: 0px;
+  top: 0px; */
+  background: #FFFFFF;
+}
+.header-item {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  cursor: pointer;
+  color: #000000;
+}
+
+.header-link{
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+}
+
+.header-contacts{
+font-weight: 500;
+font-size: 14px;
+line-height: 1.14;
+letter-spacing: 0.02em;
+color: #212121;
+}
+
+.header-current {
+ color: #2196F3; 
+}
+.header-link:hover,
+:focus {
+  color: #2196f3;
+
+.header-link-mail {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  cursor: pointer;
+}
+
+.header-link-mail:focus{
+   color: #2196f3;
+}
+
+.about-text{
+  font-weight: normal;
+font-size: 14px;
+line-height: 1.71;
+letter-spacing: 0.03em;
+}
+
+.about-h3 {
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1,14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
 }
