--- a/css/style.css
+++ b/css/style.css
@@ -255,3 +255,18 @@ ul {
   text-align: left;
   color: #757575;
 }
+.btn-one:hover {
+  color: #2196f3;
+}
+.btn-two:hover {
+  color: #2196f3;
+}
+.btn-three:hover {
+  color: #2196f3;
+}
+.btn-four:hover {
+  color: #2196f3;
+}
+.btn-five:hover {
+  color: #2196f3;
+}
