--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,7 @@ p {
   line-height: 1.85;
   letter-spacing: 0.06em;
   text-align: center;
+  cursor: pointer;
   color: var(--color-white);
   background: rgba(33, 150, 243, 1);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
