--- a/css/style.css
+++ b/css/style.css
@@ -308,6 +308,8 @@ ul {
 }
 .btn-one:hover,
 .btn-one:focus,
+.btn-two:hover,
+.btn-two:focus,
 .btn-three:hover,
 .btn-three:focus,
 .btn-four:hover,
